# nakdimon

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  app.py  attention.ipynb  attention.py  attention_1.py  crf.ipynb  dataset.py  dataset_maker.py  dicta.py  distance.py  dotter.html  dotter.js  dotting.py  editor.js  generator.py  gpu_utils.py  hebrew.py  index.html  main.ipynb  main.py  metrics.py  model.json  nakdimon.py  naqdan.py  newstyle.css  niqqud.ipynb  pyproject.toml  pytorch.ipynb  random_article.py  requirements.txt  schedulers.py  scrape_bible.py  scrape_rambam_mamre.py  scrape_short_table.py  setup.py  (+5 more)
bible_text/: bible_undotted.txt  t01.txt  t02.txt  t03.txt  t04.txt  t05.txt  t06.txt  t07.txt  t08.txt  t09.txt  t10.txt  t11.txt  t12.txt  t13.txt  t14.txt  t15.txt  t16.txt  t17.txt  t18.txt  t19.txt  t20.txt  t21.txt  t22.txt  t23.txt  t24.txt  t25.txt  t26.txt  t27.txt  t28.txt  t29.txt  t30.txt  t31.txt  t32.txt  t33.txt  t34.txt  t35.txt
examples/: usage.py
experiments/: ablations.py  api_dicta.py  api_snopi.py  bias.py  external_apis.py  metrics.py  pretrain.py  roots.txt  run_test.py  train.py
final_model/: model.json
model_js/: model.json
nakdimon/: __init__.py  __main__.py  ablations.py  app.py  config.py  dataset.py  external_apis.py  hebrew.py  metrics.py  nakdimon.py  partial_modern.py  predict.py  pretrain.py  run_test.py  schedulers.py  server.py  table_maker.py  train.py  transformer.py  utils.py
other/: main.ipynb  random_article.py  scrape_rambam_mamre.py  transformer.ipynb  transformer.py  ynet_crawl.py  (+3 more)
(+4053 files in other folders)
