[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nakdimon"
version = "0.1.2"
authors = [
  { name="Elazar Gershuni", email="elazarg@gmail.com" },
]
description = "Diacritic restoration for Hebrew"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["nakdimon"]
exclude = []  # exclude packages matching these glob patterns (empty by default)
namespaces = false

[tool.setuptools.package-data]
nakdimon = ["Nakdimon.h5"]

[project.urls]
"Homepage" = "https://github.com/elazarg/nakdimon"
"Bug Tracker" = "https://github.com/elazarg/nakdimon/issues"

[project.scripts]
nakdimon = 'nakdimon:main'
diacritize = 'nakdimon:diacritize_main'
